--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+@import url("@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&display=swap');");
+
+/*
+body{
+    font-family: 'Monserrat', sans-serif !important;
+}*/
+
 #info{
     background:#1a2c50;
     /*linear-gradient(90deg,#39528b,  #233b6b) !important;*/
